source/objects/OrderFulfillmentReduced__c.object
<CustomObject>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>MaxTransactionTimestamp__c  -  DATETIMEVALUE(OrderLookup__r.EffectiveDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxTransactionTimestamp__c</fullName>
        <label>MaxTransactionTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrderLookup</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>OrderFulfillmentReduced</relationshipLabel>
        <relationshipName>OrderFulfillmentReduced</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <externalId>true</externalId>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>OrderFulfillmentReduced</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MaxTransactionTimestamp__c</columns>
        <columns>Order__c</columns>
        <columns>OrderLookup__c</columns>
        <columns>Elapsed_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OFR-{0000}</displayFormat>
        <label>OrderFulfillmentReduced Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderFulfillmentReduced</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>